Added: google clint lib

--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.fredericvauchelles</groupId>
     <artifactId>google-command-line</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>app-client</packaging>
-
     <name>google-command-line</name>
-
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
@@ -21,8 +16,12 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.11.0-beta</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -44,7 +43,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <archive>
-                        <manifest>                            
+                        <manifest>
                             <mainClass>org.fredericvauchelles.Main</mainClass>
                         </manifest>
                     </archive>
@@ -77,5 +76,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
