--- a/src/it/upload/pom.xml
+++ b/src/it/upload/pom.xml
@@ -20,6 +20,7 @@
             <configuration>
               <files>
                 <file>src/main/resources/googleDrive.properties</file>
+                <file>src/main/resources/googleDrive.tmp.properties</file>
               </files>
             </configuration>
           </execution>
