--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <artifactId>maven-invoker-plugin</artifactId>
         <version>1.7</version>
         <configuration>
+          <debug>true</debug>
           <projectsDirectory>src/it</projectsDirectory>
           <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
           <pomIncludes>
