Update: pom information

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
   <groupId>com.fredericvauchelles</groupId>
   <artifactId>google-drive-maven-plugin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>google-drive-maven-plugin Maven Plugin</name>
-  <url>http://maven.apache.org</url>
+  <description>Maven plugin to access Google Drive API</description>
+  <url>https://github.com/fredpointzero/google-drive-maven-plugin</url>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:git:git@github.com:fredpointzero/google-drive-maven-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:fredpointzero/google-drive-maven-plugin.git</developerConnection>
+    <url>https://github.com/fredpointzero/google-drive-maven-plugin</url>
+  </scm>
+  <developers>
+    <developer>
+      <id>frederic.vauchelles</id>
+      <name>Frédéric Vauchelles</name>
+      <email>frederic.vauchelles@gmail.com</email>
+    </developer>
+  </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
