--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>google-api-services-drive</artifactId>
       <version>v2-rev5-1.7.2-beta</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-project</artifactId>
+      <version>2.0.4</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
